# docs/swagger.yaml
@@ -106,6 +106,8 @@ definitions:
     type: object
   store.User:
     properties:
+      activated:
+        type: boolean
       created_at:
         type: string
       email:
@@ -429,6 +431,37 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: unfollow a user
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      consumes:
+      - application/json
+      description: activate a user using the token sent via email
+      parameters:
+      - description: activation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: activate a user
       tags:
       - users
 securityDefinitions:
